Spacing fixes

--- a/MasterBox/Auth/LoginStyle.css
+++ b/MasterBox/Auth/LoginStyle.css
@@ -49,3 +49,6 @@
 
 /* Styling for OTP page */
 
+.otpTable td {
+	padding:10px;
+}
